fix safari error icon alignment

--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -142,6 +142,7 @@ cart-remove-button .icon-remove {
 .cart-item__error {
   font-size: 1.2rem;
   display: flex;
+  align-items: baseline;
 }
 
 .cart-item__error-text {
